syntax = "proto3";

option csharp_namespace = "CustomerTestApp.Service";

package customerService;

message Customer {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    int32 discount = 5;
    bool canBeRemoved = 6;
}

message CustomerId {
    int32 id = 1;
}

message Empty {}


message CustomerResponse {
    Status status = 1;
    string message = 2;
}

enum Status {
    SUCCESS = 0;
    ERROR = 1;
}

service CustomerManagement {
    rpc GetAllCustomers (Empty) returns (stream Customer);
    rpc AddCustomer (Customer) returns (CustomerResponse);
    rpc UpdateCustomer (Customer) returns (CustomerResponse);
    rpc DeleteCustomer (CustomerId) returns (CustomerResponse);
}

